src-ken&y/objects/Bin__c.object
<CustomObject>
    <customHelpPage>HelpBins</customHelpPage>
    <description>Bin is a sub-level of location</description>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bin_Unique__c</fullName>
        <description>A unique field to prevent duplicate bins.</description>
        <label>Bin Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Descriptive information about the bin.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Cycle_Count__c</fullName>
        <label>Last Cycle Count</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Lookup to Location.</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Bins</relationshipLabel>
        <relationshipName>Bins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max_Capacity__c</fullName>
        <label>Max Capacity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Bins</relationshipLabel>
        <relationshipName>Bins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picking_Order__c</fullName>
        <description>The order in which bins should be sorted if specified.</description>
        <inlineHelpText>The order in which bins are sorted, if specified.</inlineHelpText>
        <label>Picking Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bin</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>